--- a/package.json
+++ b/package.json
@@ -8,17 +8,29 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "@mdi/font": "5.9.55",
+    "@mdi/js": "5.9.55",
+    "axios": "0.21.1",
+    "core-js": "3.6.5",
+    "moment": "2.29.1",
+    "sass": "1.32.7",
+    "sass-loader": "10.1.1",
+    "vee-validate": "3.4.5",
+    "vue": "2.6.11",
+    "vue-router": "3.5.1",
+    "vuetify": "^2.5.6",
+    "vuex": "3.6.2",
+    "vuex-map-fields": "1.4.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "@vue/cli-plugin-babel": "4.5.0",
+    "@vue/cli-plugin-eslint": "4.5.0",
+    "@vue/cli-service": "4.5.0",
+    "babel-eslint": "10.1.0",
+    "eslint": "7.30.0",
+    "eslint-plugin-vue": "7.13.0",
+    "prettier": "2.3.2",
+    "vue-template-compiler": "2.6.11"
   },
   "eslintConfig": {
     "root": true,
