--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "@mdi/js": "5.9.55",
+    "@supabase/supabase-js": "^1.18.1",
     "axios": "0.21.1",
     "core-js": "3.6.5",
     "moment": "2.29.1",
