--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,16 @@
     "indent": ["error", 2, { "SwitchCase": 1 }],
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "double"],
-    "semi": ["error", "never"]
+    "semi": ["error", "never"],
+    //"no-console": ["error", { "allow": ["warn", "error"] }],
+    "sort-imports": [
+      "error",
+      {
+        "ignoreCase": true,
+        "ignoreDeclarationSort": false,
+        "allowSeparatedGroups": true,
+        "memberSyntaxSortOrder": ["single", "multiple", "none", "all"]
+      }
+    ]
   }
 }
