--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "@mdi/js": "5.9.55",
-    "@supabase/supabase-js": "^1.18.1",
-    "axios": "0.21.1",
+    "axios": "^0.21.1",
     "core-js": "3.6.5",
+    "firebase": "^9.0.1",
     "moment": "2.29.1",
     "sass": "1.32.7",
     "sass-loader": "10.1.1",
@@ -30,7 +30,7 @@
     "babel-eslint": "10.1.0",
     "eslint": "7.30.0",
     "eslint-plugin-vue": "7.13.0",
-    "prettier": "2.3.2",
+    "prettier": "^2.3.2",
     "vue-template-compiler": "2.6.11"
   },
   "eslintConfig": {
