--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "vue-router": "3.5.1",
     "vuetify": "2.5.6",
     "vuex": "3.6.2",
-    "vuex-map-fields": "1.4.1"
+    "vuex-map-fields": "^1.4.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.5.0",
