--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@mdi/js": "5.9.55",
     "axios": "0.21.1",
     "core-js": "3.6.5",
+    "cors": "^2.8.5",
     "firebase": "8.10.0",
     "moment": "2.29.1",
+    "nodemailer": "^6.7.1",
     "sass": "1.32.7",
     "sass-loader": "10.1.1",
     "vee-validate": "3.4.5",
