--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
     "@mdi/js": "5.9.55",
     "axios": "0.21.1",
     "core-js": "3.6.5",
-    "cors": "^2.8.5",
     "firebase": "8.10.0",
     "moment": "2.29.1",
-    "nodemailer": "^6.7.1",
     "sass": "1.32.7",
     "sass-loader": "10.1.1",
     "vee-validate": "3.4.5",
@@ -23,7 +21,7 @@
     "vue-router": "3.5.1",
     "vuetify": "2.5.6",
     "vuex": "3.6.2",
-    "vuex-map-fields": "^1.4.1"
+    "vuex-map-fields": "1.4.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.5.0",
