--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "@mdi/js": "5.9.55",
+    "apexcharts": "^3.32.0",
     "axios": "0.21.1",
     "core-js": "3.6.5",
     "moment": "2.29.1",
@@ -17,6 +18,7 @@
     "sass-loader": "10.1.1",
     "vee-validate": "3.4.5",
     "vue": "2.6.11",
+    "vue-apexcharts": "^1.6.2",
     "vue-router": "3.5.1",
     "vuetify": "2.5.6",
     "vuex": "3.6.2",
